--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
     
     <p class="error" id="error-message">Incorrect password. Please purchase access to get the password.</p>
     
-    <!-- Hidden download links -->
+    <!-- Hidden download links (sorted alphabetically by name) -->
+    <a href="https://drive.google.com/uc?export=download&id=1r9cctnuoaVZFOR4B9o_0OJlzNkTsrjYH" class="download-btn" id="btn-illustrator">Adobe Illustrator</a>
     <a href="https://drive.google.com/uc?export=download&id=14LoL4WDwSyKMu5mnpII13Xg4ds3rJfdp" class="download-btn" id="btn-premiere">Adobe Premiere Pro</a>
     <a href="https://drive.google.com/uc?export=download&id=18YRU91Ec093Up02ZUrTgTuiUhiXyb0My" class="download-btn" id="btn-lightroom">Adobe Lightroom Classic</a>
-    <a href="https://drive.google.com/uc?export=download&id=1r9cctnuoaVZFOR4B9o_0OJlzNkTsrjYH" class="download-btn" id="btn-illustrator">Adobe Illustrator</a>
-    <a href="https://drive.google.com/uc?export=download&id=1iL9iw70kvBCuCxWcYXFKtG6tqPLS2qWC" class="download-btn" id="btn-aftereffects">Adobe After Effects</a>
-    <a href="https://drive.google.com/uc?export=download&id=1qTVHXtvqr46ocJBFFL8MOTCxZLJGLf_K" class="download-btn" id="btn-photoshop">Adobe Photoshop</a>
     <a href="https://drive.google.com/uc?export=download&id=1S-ytnSDzXOug7QIX8nGAgxIPYqJjXDp1" class="download-btn" id="btn-msoffice">MS Office Pro Plus 2021</a>
+    <a href="https://drive.google.com/uc?export=download&id=1iL9iw70kvBCuCxWcYXFKtG6tqPLS2qWC" class="download-btn" id="btn-aftereffects">Adobe After Effects</a>
     <a href="https://drive.google.com/uc?export=download&id=1wSZahApmJed8fqfiXj5Jq_WqGjjHculq" class="download-btn" id="btn-autocad">Autodesk Autocad 2025</a>
+    <a href="https://drive.google.com/uc?export=download&id=1qTVHXtvqr46ocJBFFL8MOTCxZLJGLf_K" class="download-btn" id="btn-photoshop">Adobe Photoshop</a>
+    <a href="https://drive.google.com/uc?export=download&id=1SfiKy9LFjoUU1jdae2MQb1kygbV3Z-4Z" class="download-btn" id="btn-sketchup">Sketchup Pro 2025</a>
 
     <script>
         const validPassword = 'Fetopia2025'; // The password to access the downloads
