--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <a href="https://drive.google.com/uc?export=download&id=1iL9iw70kvBCuCxWcYXFKtG6tqPLS2qWC" class="download-btn" id="btn-aftereffects">Adobe After Effects</a>
     <a href="https://drive.google.com/uc?export=download&id=1wSZahApmJed8fqfiXj5Jq_WqGjjHculq" class="download-btn" id="btn-autocad">Autodesk Autocad 2025</a>
     <a href="https://drive.google.com/uc?export=download&id=1qTVHXtvqr46ocJBFFL8MOTCxZLJGLf_K" class="download-btn" id="btn-photoshop">Adobe Photoshop</a>
+    <a href="https://drive.google.com/uc?export=download&id=1hg9rJl-ginO3_UGRWd1-EqVcErgUwZl4" class="download-btn" id="btn-nitro">Nitro Pro</a>
     <a href="https://drive.google.com/uc?export=download&id=1SfiKy9LFjoUU1jdae2MQb1kygbV3Z-4Z" class="download-btn" id="btn-sketchup">Sketchup Pro 2025</a>
 
     <script>
