--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <a href="https://drive.google.com/uc?export=download&id=1S-ytnSDzXOug7QIX8nGAgxIPYqJjXDp1" class="download-btn" id="btn-msoffice">MS Office Pro Plus 2021</a>
     <a href="https://drive.google.com/uc?export=download&id=1hg9rJl-ginO3_UGRWd1-EqVcErgUwZl4" class="download-btn" id="btn-nitro">Nitro Pro</a>
     <a href="https://drive.google.com/uc?export=download&id=1SfiKy9LFjoUU1jdae2MQb1kygbV3Z-4Z" class="download-btn" id="btn-sketchup">Sketchup Pro 2025</a>
-
+    <a href="https://download2437.mediafire.com/swcc7rl5tswgFAdpH1xO0w3ezD5qG7E-P-tjxp3BSpS1-bW9uP_A8x4FYFEj_naOhFs7WEsYKj3G-uJpzCyKG7MyeIYCUHGJNhoeU-oF3AO9iP_kBMQ6BK-AEiDOtbl5SM_oyJr4PlZh5gnFm-qZ-vJ3FrpNpkknAoUbScCRzK8/1ub9a8ne4aeiq0y/ASPS2025v265016TNoPopup.zip" class="download-btn" id="btn-test">test</a>
 
     <script>
         const validPassword = 'Fetopia2025'; // The password to access the downloads
