--- a/index.html
+++ b/index.html
@@ -52,16 +52,14 @@
     <p class="error" id="error-message">Incorrect password. Please purchase access to get the password.</p>
     
     <!-- Hidden download links (sorted alphabetically by name) -->
-    <a href="https://drive.google.com/uc?export=download&id=1iL9iw70kvBCuCxWcYXFKtG6tqPLS2qWC" class="download-btn" id="btn-aftereffects">Adobe After Effects</a>
-    <a href="https://drive.google.com/uc?export=download&id=1r9cctnuoaVZFOR4B9o_0OJlzNkTsrjYH" class="download-btn" id="btn-illustrator">Adobe Illustrator</a>
-    <a href="https://drive.google.com/uc?export=download&id=18YRU91Ec093Up02ZUrTgTuiUhiXyb0My" class="download-btn" id="btn-lightroom">Adobe Lightroom Classic</a>
-    <a href="https://drive.google.com/uc?export=download&id=14LoL4WDwSyKMu5mnpII13Xg4ds3rJfdp" class="download-btn" id="btn-premiere">Adobe Premiere Pro</a>
-    <a href="https://drive.google.com/uc?export=download&id=1qTVHXtvqr46ocJBFFL8MOTCxZLJGLf_K" class="download-btn" id="btn-photoshop">Adobe Photoshop</a>
-    <a href="https://drive.google.com/uc?export=download&id=1wSZahApmJed8fqfiXj5Jq_WqGjjHculq" class="download-btn" id="btn-autocad">Autodesk Autocad 2025</a>
-    <a href="https://drive.google.com/uc?export=download&id=1S-ytnSDzXOug7QIX8nGAgxIPYqJjXDp1" class="download-btn" id="btn-msoffice">MS Office Pro Plus 2021</a>
-    <a href="https://drive.google.com/uc?export=download&id=1hg9rJl-ginO3_UGRWd1-EqVcErgUwZl4" class="download-btn" id="btn-nitro">Nitro Pro</a>
-    <a href="https://drive.google.com/uc?export=download&id=1SfiKy9LFjoUU1jdae2MQb1kygbV3Z-4Z" class="download-btn" id="btn-sketchup">Sketchup Pro 2025</a>
-    <a href="https://download2437.mediafire.com/swcc7rl5tswgFAdpH1xO0w3ezD5qG7E-P-tjxp3BSpS1-bW9uP_A8x4FYFEj_naOhFs7WEsYKj3G-uJpzCyKG7MyeIYCUHGJNhoeU-oF3AO9iP_kBMQ6BK-AEiDOtbl5SM_oyJr4PlZh5gnFm-qZ-vJ3FrpNpkknAoUbScCRzK8/1ub9a8ne4aeiq0y/ASPS2025v265016TNoPopup.zip" class="download-btn" id="btn-test">test</a>
+    <a href="https://download2347.mediafire.com/33ml2c660jlgMctWQJmKPTqCrQfN58inphtYCIDk-E2xweTnwCeTV9qlFk4BR8FCC1ORSbv5v9OAWj_pdgbVmLqPYJKI4_PE88MHPCk1vysrFHBPpUsMDrKifS3yABoPbAjMhBYlfL1oyJYLVoHGmjwo44fBjSB2S-QViC1ngM0/az2y11vl13u480c/Illus2931M.zip" class="download-btn" id="btn-adobe-illustrator" title="Adobe Illustrator">Adobe Illustrator</a>
+    <a href="https://download2344.mediafire.com/f967x5vp3pkg3nwm0x-YpSHvYz19HmtqiwwbVXzVVr1CVE9HyBJNNQK6Yscfa8e3wUxH3fCOprUU1noMKXG0rBUdZlTwSrRKvpfPVwbD83YKxPSnIgf52p8dl7mKngyrLdcyio1OpSQRoIgwAAgVYGqRikLseEzMOEXhxsxV-uo/cz8q4vju9x6vjou/AdPrPro2025v2521002.zip" class="download-btn" id="btn-adobe-premiere-pro" title="Adobe Premiere Pro">Adobe Premiere Pro</a>
+    <a href="https://download2293.mediafire.com/7f9154tkx7ogyN9QiDOsINW_caWfHb94nN0JFsb1QDXIlFM0nKFVXZhlyp2PknnhGnma8eb7jbQ6AdNT5ZwHgNSgZdb5cdRUtY14TMScX9KZl4MJ_0T-_CThyRY3xEa6WN1K3w6ZLusRQiMbbmbWSjRZ69T3vojkB-XXmfDl2wU/k2jnx2jntu8xe88/AdME2025v2520141.zip" class="download-btn" id="btn-adobe-media-encoder" title="Adobe Media Encoder">Adobe Media Encoder</a>
+    <a href="https://download2275.mediafire.com/n8hod88uv3qgfwebuI4PN3O0sJctLtr8UVWl8rpoM_m5ReQsj6zx3BgDLTIIQOq6cYkPiLsq9bbuThi3uTXdFPEt3Trt5DJQa-H_Yd7VJIGc88REynndcXhjJDc3Oo1lXE60wJcpFJlcqE0IF_2lvGczUcnMcMMgNlySTnoTjmw/g6z5de7wtnq6eaw/AdInD2025v2020036.zip" class="download-btn" id="btn-adobe-indesign" title="Adobe Indesign">Adobe Indesign</a>
+    <a href="https://download2363.mediafire.com/t98uld9f55ug6XsQ87eD44FvYejRN69bS33W-o9_8ijlN6VcRUCdIHWiTXjDrk2ImOXyxwS292MODuAEyjA3ycPhh2pmUBxfZcwkVPbaLSLGp8vtMHt_gVoyaeTEuUAx7iBmzY_IGAP-zfg8xxg0d31DYB4j2Q_VJON7UlJurIs/i9ah8okoxpqeflh/AdLClassicv1420.zip" class="download-btn" id="btn-adobe-lightroom-classic" title="Adobe Lightroom Classic">Adobe Lightroom Classic</a>
+    <a href="https://download2366.mediafire.com/cs4ehjwmvvqgPHMt7UxKlvx9qK2d5CpgGoTh7VgwQf6udG6hsTs3ir4bHwOi5825QqDQPZYlEK0_JNRwrqQ3Y5IHO4UpIFCf-SoPIKdJ2D-cjIPQtJhtNdzkAXEkjH4RrUtY8It5X5w5VAjPF7hDitUzG4XlHFtY8cjm1fnyoLI/axmhdh8ojchpg1u/AdAPro202525120435.zip" class="download-btn" id="btn-adobe-acrobat-pro-dc" title="Adobe Acrobat Pro DC">Adobe Acrobat Pro DC</a>
+    <a href="https://download2345.mediafire.com/pg9tcnnk1thgvu1thiWWluLZOeH4ol7yaikvSy5NRkzdoDRaU55LMi--g5f27FynkAi3w_VBjW1JatHiAOc_gAPg5Z7cIsxNniiA693KFKBQnKYOFIdmMq9CFx2lkfDWGpzQswTqMad3cXODdDcxOtD9kRg9-H2rK4JKX84q7vA/z6zgjppe2v8fxv3/AdAE2025v2520131.zip" class="download-btn" id="btn-adobe-after-effects" title="Adobe After Effects">Adobe After Effects</a>
+    <a href="https://download2437.mediafire.com/swcc7rl5tswgFAdpH1xO0w3ezD5qG7E-P-tjxp3BSpS1-bW9uP_A8x4FYFEj_naOhFs7WEsYKj3G-uJpzCyKG7MyeIYCUHGJNhoeU-oF3AO9iP_kBMQ6BK-AEiDOtbl5SM_oyJr4PlZh5gnFm-qZ-vJ3FrpNpkknAoUbScCRzK8/1ub9a8ne4aeiq0y/ASPS2025v265016TNoPopup.zip" class="download-btn" id="btn-adobe-photoshop" title="Adobe Photoshop">Adobe Photoshop</a>
 
     <script>
         const validPassword = 'Fetopia2025'; // The password to access the downloads
